--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,24 +1,33 @@
-/* * {
-  padding: 5px;
-} */
-
-/* body {
+* {
+  background: #221c1c;
   font-family: monospace;
-  font-size: 22px;
+  font-weight: bolder;
+  font-size: 15px;
 }
 
-.terminal-content {
-  background: #242630;
-  color: white;
-  width: 100%;
-  height: 80%;
-
-  width: 100%;
-  height: 400px;
-} */
-
-
-.terminal #cli-input { 
-        resize: none;
+.terminal {
+  color: #64957d;
+}
+.terminal #input {
+  resize: none;
+  color: #64957d;
+  width: 10%;
+  height: 30px;
+  position: absolute;
+  margin-left: -1000000000000px;
+  border: none;
+  display: inline-block;
+  outline: none;
+  justify-content: start;
+  cursor: pointer;
+  padding-bottom: 20px;
 }
 
+#input::before {
+  content: "Jarzt@cli:~$ ";
+  color: #64957d;
+}
+
+#typer::before {
+  content: "Jarzt@cli:~$ ";
+}
